--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,8 @@
+name = "WeightedStackedDID"
+uuid = "b859cd17-d912-4703-9959-9f2c2f71a140"
+authors = ["Elias L Ohneberg"]
+version = "0.0.1"
+
 [deps]
-CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FixedEffectModels = "9d5cd8c9-2029-5cab-9928-427838db53e3"
-LinearHypothesisTest = "911dceac-9954-403b-ac9e-c0705abf4ded"
