--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ authors = ["Elias L Ohneberg"]
 version = "0.0.1"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FixedEffectModels = "9d5cd8c9-2029-5cab-9928-427838db53e3"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
